2010-03-04  Tony Chang  <tony@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=18819
        Pressing option+page{down,up} should move the cursor and scroll in
        content editable areas.  On other platforms, pressing page{down,up}
        should move the cursor and scroll in content editable areas.

        * editing/input/option-page-up-down-expected.txt: Added.
        * editing/input/option-page-up-down.html: Added.
2010-03-04  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=18819
        Pressing option+page{down,up} should move the cursor and scroll in
        content editable areas.  On other platforms, pressing page{down,up}
        should move the cursor and scroll in content editable areas.

        Test: editing/input/option-page-up-down.html

        * editing/EditorCommand.cpp:
        (WebCore::verticalScrollDistance):

Canonical link: https://commits.webkit.org/46863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55566 268f45cc-cd09-0410-ab3c-d52691b4dbfc